tests/baselines/reference/widenToAny2.errors.txt
tests/cases/compiler/widenToAny2.ts(4,5): error TS2322: Type '文字' is not assignable to type '数字'.


==== tests/cases/compiler/widenToAny2.ts (1 errors) ====
    function foo3<T>(x: T[]): T {
        return undefined;
    }
    var z3:number = foo3([undefined, "def"]);  // Type is any, but should be string
        ~~
!!! error TS2322: Type '文字' is not assignable to type '数字'.
    